--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ioredis": "^5.4.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
     "toad-scheduler": "^3.0.1"
   }
 }
