--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@twa-dev/sdk": "^7.10.1",
+    "axios": "^1.7.7",
     "jose": "^5.9.4",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
