--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.68",
     "@twa-dev/sdk": "^7.10.1",
+    "ai": "^3.4.18",
     "axios": "^1.7.7",
     "jose": "^5.9.4",
     "lucide-react": "^0.453.0",
