--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.68",
     "@twa-dev/sdk": "^7.10.1",
+    "@twa-dev/types": "^7.10.0",
     "ai": "^3.4.18",
     "axios": "^1.7.7",
     "jose": "^5.9.4",
