--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
