--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.68",
+    "@ton/core": "^0.59.0",
+    "@tonconnect/sdk": "^3.0.5",
+    "@tonconnect/ui-react": "^2.0.9",
     "@twa-dev/sdk": "^7.10.1",
     "@twa-dev/types": "^7.10.0",
     "ai": "^3.4.18",
