--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-youtube": "^10.1.0",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0",
     "zod": "^3.23.8"
