--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.68",
+    "@telegram-apps/sdk": "^1.1.3",
     "@ton/core": "^0.59.0",
     "@ton/crypto": "^3.3.0",
     "@tonconnect/sdk": "^3.0.5",
