update meta test

--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://kodomochi.xyz",
+  "url": "https://kodomochi.pet",
   "name": "KodoMochi",
   "iconUrl": "https://nanopets.vercel.app/manifest-icon.png"
 }
