--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ton/core": "^0.59.0",
+    "@ton/ton": "^15.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
