--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@ton/core": "^0.59.0",
+    "@ton/crypto": "^3.3.0",
     "@ton/ton": "^15.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
